# mysd2csv

./: .pre-commit-config.yaml  LICENCE  README.md  example.mysqldump.sql  mysd2csv  mysd2csv.py  mysqldumptocsv  pytest.ini  setup.cfg  test_mysd2csv.py  tox.ini
tests/: conftest.py  test_mysd2csv.py
