[metadata]
name = mysd2csv
version = 0.0.1
description = Convert single MySQL table dump into csv file with header.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HeySlava/mysd2csv
author = Vyacheslav Kapitonov
author_email = vyach.kapitonov@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
py_modules = mysd2csv
python_requires = >=3.6

[options.entry_points]
console_scripts =
    mysd2csv = mysd2csv:main
